--- a/PROYECTO-MJC memoorize/juegos/juego rompe/rompecabeza 3x3/index.html
+++ b/PROYECTO-MJC memoorize/juegos/juego rompe/rompecabeza 3x3/index.html
@@ -48,20 +48,19 @@
                     </p>
                     <div>
                         <button id="regla" type="button" class="btn">Reglas</button>
-                        <button id="newPhoto" type="button" class="btn" onclick="restart();">Otra Imagen</button>
                         <button id="acercaDe" type="button" class="btn">Acerca de:</button>
                     </div>
                 </div>
             </div>
         </div>
         <div id="gameOver" style="display:none;">
-            <div style="background-color: #da00003f; padding: 5px 10px 20px 10px; text-align: center; ">
-                <h2 style="text-align:center">¡¡Juego terminado!!</h2>
-                ¡¡Felicidades!! <br /> Has completado este nivel
+            <div style="background-color: #da00003f; padding: 5px 0px 0px 10px; text-align: center; ">
+                ¡¡Felicidades!! Has completado este nivel
                 <br /> Movimientos: <span id="stepCount" class="stepCount">0</span> Movimientos:
                 <br /> TIEMPO TOMADO: <span class="timeCount">0</span> SEG: <br />
                 <div>
-                    <button type="button" onclick="window.location.reload(true);">Jugar de nuevo</button>
+                    <button type="button" onclick="window.location.href='../rompecabeza 4x4/index.html';">Siguiente Nivel</button>
+
                 </div>
             </div>
         </div>
