--- a/PROYECTO-MJC memoorize/juegos/juego rompe/nivel/index.html
+++ b/PROYECTO-MJC memoorize/juegos/juego rompe/nivel/index.html
@@ -53,7 +53,7 @@
         <div class="chest" onclick="showModal()">
             <img src="../../../img/icon/cofre.png" alt="Cofre del tesoro" class="chest-img">
         </div>
-        <img src="../../../img/icon/barco.png" alt="Barco pirata" class="ship" id="ship" style="top: 50px; left: 50px;">
+        <img src="../../../img/bar.png" alt="Barco pirata" class="ship" id="ship" style="top: 50px; left: 50px;">
     </div>
     <div class="modal" id="modal">
         <div class="modal-content">
