--- a/PROYECTO-MJC memoorize/juegos/quiz/index.html
+++ b/PROYECTO-MJC memoorize/juegos/quiz/index.html
@@ -30,7 +30,7 @@
         <div class="chest" onclick="showModal()">
             <img src="../../img/icon/cofre.png" alt="Cofre del tesoro" class="chest-img">
         </div>
-        <img src="../../img/bar.png" alt="Barco pirata" class="ship" id="ship" style="top: 50px; left: 50px;">
+        <!-- <img src="../../img/bar.png" alt="Barco pirata" class="ship" id="ship" style="top: 50px; left: 50px;"> -->
     </div>
     <div class="modal" id="modal">
         <div class="modal-content">
@@ -42,7 +42,7 @@
     <audio id="backgroundMusic" src="../../audio/no-copyright-music-181373.mp3" loop></audio>
     <script src="../../services/niveles/niveles.js"></script>
     <script src="js/menu.js"></script>
-    <script src="js/barco.js"></script>
+    <!-- <script src="js/barco.js"></script> -->
     <script src="js/sonido.js"></script>
     <script src="../../bootstrap/js/bootstrap.js"></script>
     <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
