--- a/PROYECTO-MJC memoorize/juego3/index.html
+++ b/PROYECTO-MJC memoorize/juego3/index.html
@@ -36,9 +36,7 @@
             <p>Si sales, no podrás volver a ingresar a la sala y perderás tu progreso.</p>
             <div class="modal-buttons">
                 <button onclick="hideExitWarningModal()">Cancelar</button>
-                <button>
-                <a href="../multijugador/sala/index.html" class="btn-exit">Salir</a>
-            </button>
+                <a href="../menu/index.html" class="btn-exit">Salir</a>
                 
             </div>
         </div>
