--- a/PROYECTO-MJC memoorize/multijugador/unirseSala/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/unirseSala/index.html
@@ -90,8 +90,8 @@
     </div>
     
     <audio id="backgroundMusic" src="../../audio/no-copyright-music-181373.mp3" loop></audio>
-    <script src="js/main.js"></script>
     <script src="js/menu.js"></script>
+    <script src="js/nuevo.js"></script>
     <script src="../../bootstrap/js/bootstrap.js"></script>
     <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
 
