--- a/PROYECTO-MJC memoorize/juego3/index.html
+++ b/PROYECTO-MJC memoorize/juego3/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,9 +7,12 @@
     <title>Cartas</title>
     <link rel="stylesheet" href="estilos/estilo_cartas.css">
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
  
 </head>
 <body>
+
+   
     <div class="back-button">
         <a href="#" onclick="showExitWarningModal()"><img class="back-button-img" src="../img/icon/back.png" alt="Icono de retroceder"></a>
     </div>  
