--- a/PROYECTO-MJC memoorize/juegos/juego rompe/rompecabeza 3x3/index.html
+++ b/PROYECTO-MJC memoorize/juegos/juego rompe/rompecabeza 3x3/index.html
@@ -4,8 +4,6 @@
 <head>
     <title>ROMPE CABEZA</title>
     <link href="css/style.css" rel="stylesheet" />
-    <script src="js/image-puzzle.js"></script>
-    <script src="js/img.js"></script>
     <link rel="shortcut icon" href="images/rompecabeza.png">
     <script src="../bootstrap/js/bootstrap.bundle.js"></script> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -35,7 +33,7 @@
                 <div id="stepCount" class="stepCount">0</div>
             </div>
             <div id="timeBox">
-                TIEMPO TOMADO: <span id="timerPanel"></span> SEG:
+                TIEMPO RESTANTE: <span id="timerPanel"></span> SEG:
             </div>
             <div style="display:inline-block; margin:auto; width:95%; vertical-align:top;">
                 <ul id="sortable" class="sortable"></ul>
@@ -73,6 +71,9 @@
         <button class="close-button" onclick="closeModal()">Cerrar</button>
         </div>
     </div>
+
+    <script src="js/image-puzzle.js"></script>
+    <script src="js/img.js"></script>
 
 
     <script>
