--- a/PROYECTO-MJC memoorize/multijugador/crearSala/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/crearSala/index.html
@@ -71,7 +71,8 @@
     </div>
     <audio id="backgroundMusic" src="../../audio/no-copyright-music-181373.mp3" loop></audio>
     <script src="js/menu.js"></script>
-    <script src="js/cambiarSala.js"></script>
+    <!-- <script src="js/cambiarSala.js"></script> -->
+     <script src="../../services/multijugador/sala.js"></script>
     <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
 </body>
 </html>
