actualizacion de la base de datos

--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -107,6 +107,7 @@
                         <table class="table">
                             <thead>
                                 <tr>
+                                    <th>top</th>
                                     <th>Jugador</th>
                                     <th>Puntuación</th>
                                     <th>Tiempo</th>
