--- a/PROYECTO-MJC memoorize/interfaz/index.html
+++ b/PROYECTO-MJC memoorize/interfaz/index.html
@@ -13,13 +13,11 @@
         <div class="porthole">
             <div class="coral"></div> 
         </div>
+        
         <div class="content">
+            
             <h1>AQUA MEMORY</h1>
-            <p >
-                 Sumérgete en un mundo lleno de diversión, donde cada juego que descubras será una oportunidad para ejercitar tu mente. 
-                 ¡Prepárate para zambullirte y que la suerte te acompañe en este viaje...🌊🐙!
-
-
+            <p id="escritura"></p>
             </p>
             <button id="readMore">INICIAR</button>
         </div>
