--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <div class="modal-footer bordeNone">
-                   <!--   <button type="button" id="btn-modal" class="btn-secondary" data-bs-dismiss="modal">Cerrar</button> -->
+                   <button type="button" id="btn-modal" class="btn-secondary" data-bs-dismiss="modal">Cerrar</button> 
 
                 </div>
             </div>
