--- a/PROYECTO-MJC memoorize/juegos/quiz/niveles/index.html
+++ b/PROYECTO-MJC memoorize/juegos/quiz/niveles/index.html
@@ -71,7 +71,7 @@
 
     <audio id="backgroundMusic" src="../../../audio/no-copyright-music-181373.mp3" loop></audio>
     <script src="./js/main.js"></script>
-    <!-- <script src="js/menu2.js"></script> -->
+    <script src="js/menu2.js"></script> 
     <script src="../../../bootstrap/js/bootstrap.js"></script>
     <script src="../../../bootstrap/js/bootstrap.bundle.js"></script>
 </body>
