--- a/PROYECTO-MJC memoorize/juegos/juego rompe/niveles/index.html
+++ b/PROYECTO-MJC memoorize/juegos/juego rompe/niveles/index.html
@@ -6,7 +6,6 @@
     <link href="css/style.css" rel="stylesheet" />
     <link rel="shortcut icon" href="images/rompecabeza.png">
     <script src="../bootstrap/js/bootstrap.bundle.js"></script> 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
  
     <link rel="stylesheet" href="../css/modal.css">
@@ -18,7 +17,7 @@
 
 <body>
     <div class="back-button">
-        <a href="../nivel/index.html"><img class="back-button-img" src="../../../img/icon/back.png" alt="Icono de retroceder"></a>
+        <a href="../index.html"><img class="back-button-img" src="../../../img/icon/back.png" alt="Icono de retroceder"></a>
     </div>
     
     <div id="collage">
