--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -10,7 +10,7 @@
     <title>Menu</title>
 </head>
 <body>
-    <h1 class="menu-title">Menú de Juegos</h1>
+    <h1 id="menutitle"></h1>
     <div class="back-button">
         <a href="../interfaz/index.html"><img class="back-button-img" src="../img/icon/back.png" alt="Icono de retroceder"></a>
     </div>
