--- a/PROYECTO-MJC memoorize/juegos/juego rompe/niveles/index.html
+++ b/PROYECTO-MJC memoorize/juegos/juego rompe/niveles/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <script src="js/image-puzzle.js"></script>
-    <script src="js/img.js"></script>
+    <!-- <script src="js/img.js"></script> -->
 
 
     <script>
