--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -213,8 +213,9 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class=" btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn-secondary" id="saveUsername">Guardar Cambios</button>
+            
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary"  data-bs-dismiss="modal" id="actualizar">Guardar Cambios</button>
             </div>
         </div>
     </div>
