editar perfil primera fase

--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -209,7 +209,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="personalInfo" class="form-label">Información Personal:</label>
-                    <textarea class="form-control" id="personalInfo" rows="3" placeholder="Ingrese información personal"></textarea>
+                    <input type="text" id="descripcion" class="form-control" placeholder="Ingrese información personal">
                 </div>
             </div>
             <div class="modal-footer">
@@ -305,6 +305,7 @@
     <script src="../services/juego/juegos.js"></script>
     <script src="../services/avatar/avatarComprados.js"></script>
     <script src="../services/usuario/perfil.js"></script>
+    <script src="../services/usuario/editarUsuario.js"></script>
     <script src="../services/podio/top.js"></script>
     <script src="js/sonido.js"></script>
     <script src="js/icon.js"></script>
