actualizacion de verificar codigo

--- a/PROYECTO-MJC memoorize/multijugador/unirseSala/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/unirseSala/index.html
@@ -91,7 +91,7 @@
     
     <audio id="backgroundMusic" src="../../audio/no-copyright-music-181373.mp3" loop></audio>
     <script src="js/menu.js"></script>
-    <script src="js/nuevo.js"></script>
+    <script src="../../services/multijugador/codigoSala.js"></script>
     <script src="../../bootstrap/js/bootstrap.js"></script>
     <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
 
