backend sobre cerrar sala(falta mejora) y creacion de php para llamar datos de la bd para el juego cartas

--- a/PROYECTO-MJC memoorize/multijugador/sala/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/sala/index.html
@@ -11,8 +11,12 @@
 </head>
 <body>
     <div class="back-button">
-        <a href="../../multijugador/index.html"><img class="back-button-img" src="../../img/icon/back.png" alt="Icono de retroceder"></a>
+        <a id="btnSalirSala" href="../../multijugador/index.html">Salir de la sala</a>
+            <img class="back-button-img" src="../../img/icon/back.png" alt="Icono de retroceder">
+        </a>
     </div>
+    
+
     <!-- Botón de chat (ya existente) -->
     <button id="chatButton" data-bs-toggle="modal" data-bs-target="#chat-modal">
         <img class="imgChat" src="../../img/icon/chat.png" alt="Icono del chat">
@@ -122,6 +126,7 @@
     <audio id="backgroundMusic" src="../../audio/no-copyright-music-181373.mp3" loop></audio>
     
 
+    scr
     <script src="js/sala.js"></script>
     <script src="../unirseSala/js/menu.js"></script>
     <script src="../../bootstrap/js/bootstrap.js"></script>
