--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -342,6 +342,7 @@
     <script src="../services/usuario/editarNickName.js"></script>
     <script src="../services/podio/top.js"></script>
     <script src="../services/historial/historial.js"></script>
+    <script src="../services/usuario/cerrarSesion.js"></script>
     <script src="js/sonido.js"></script>
     <script src="js/icon.js"></script>
     
