llamar datos de sala y implementar en el juego funcional

--- a/PROYECTO-MJC memoorize/juego3/index.html
+++ b/PROYECTO-MJC memoorize/juego3/index.html
@@ -48,6 +48,6 @@
     <audio id="backgroundMusic" src="../audio/no-copyright-music-181373.mp3" loop></audio>
     <script src="estilos/alerta.js"></script>
     
-    <script src="js/script_cartas.js"></script>
+    <script src="js/scriptCartas.js"></script>
 </body>
 </html>
