--- a/PROYECTO-MJC memoorize/juegos/juego rompe/niveles/index.html
+++ b/PROYECTO-MJC memoorize/juegos/juego rompe/niveles/index.html
@@ -47,15 +47,20 @@
             </div>
         </div>
         <div id="gameOver" style="display:none;">
-            <div style="background-color: #da00003f; padding: 5px 0px 0px 10px; text-align: center; ">
+            <div style="background-color: #da00003f; padding: 5px 0px 0px 10px; text-align: center;">
                 ¡¡Felicidades!! Has completado este nivel
                 <br /> Movimientos: <span id="stepCount" class="stepCount">0</span> Movimientos:
                 <br /> TIEMPO TOMADO: <span class="timeCount">0</span> SEG: <br />
                 <div>
                     <button type="button" onclick="window.location.href='../rompecabeza 4x4/index.html';">Siguiente Nivel</button>
-
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div id="myModal" class="modal-background">
+        <div class="modal-content">
+            <!-- El contenido se inserta dinámicamente aquí -->
         </div>
     </div>
 
@@ -68,6 +73,7 @@
     </div>
 
     <script src="js/image-puzzle.js"></script>
+    <script src="js/modal.js"></script>
     <!-- <script src="js/img.js"></script> -->
 
 
